--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,6 +11,6 @@ jobs:
         with:
           python-version: '3.13.2'
       - run: pip install -r requirements.txt
-      - run: pytest --cov=generation
+      - run: pytest --cov=generator
       - run: flake8
       - run: black --check .
