--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,16 +1,37 @@
-name: Python CI
+name: Python CI & SonarQube
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
 
 jobs:
-  build:
+  test-and-lint:
+    name: Run tests and linters
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.13.2'
+          python-version: "3.13.2"
       - run: pip install -r requirements.txt
       - run: pytest --cov=generator
       - run: flake8
       - run: black --check .
+
+  sonar:
+    name: SonarQube Analysis
+    runs-on: ubuntu-latest
+    needs: test-and-lint # ← Lance l'analyse seulement si les tests passent
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - uses: SonarSource/sonarqube-quality-gate-action@v1
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
