--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,6 @@
 sonar.projectKey=HexAPI
+sonar.projectName=HexAPI
+sonar.sources=.
+sonar.sourceEncoding=UTF-8
+sonar.python.version=3.13
+sonar.exclusions=tests/**
