refactor(core/gui): clean architecture, improve test coverage and Sonar integration
- Refactored logic into core/gui separation (SOLID-compliant)
- Added unit tests for naming, faker utils, generator logic, and widgets
- Introduced main GUI entrypoint via main.py with better modularity
- Setup coverage tracking and SonarQube compliance (.coveragerc, coverage.xml)
- Extracted constants (fonts, colors) for consistency and maintainability
- Updated README, ROADMAP, TODO with new structure and coverage strategy
- VSCode and Makefile enhancements for dev workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - sonarqube
     volumes:
       - .:/usr/src # ton code local monté dans le conteneur
+      - ./.git:/usr/src/.git
     working_dir: /usr/src
     environment:
       - SONAR_HOST_URL=http://sonarqube:9000
