--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=HexAPI
 sonar.projectName=HexAPI
-sonar.sources=.
+sonar.sources=generator
 sonar.sourceEncoding=UTF-8
 sonar.python.version=3.13
 sonar.exclusions=tests/**
+sonar.python.coverage.reportPaths=./coverage.xml
