--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,10 @@ repos:
     rev: 25.1.0
     hooks:
       - id: black
+        name: black
+        language_version: python3
+        types: [python]
+        args: ["--fast"]
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
     hooks:
@@ -11,3 +15,7 @@ repos:
     rev: 5.13.2
     hooks:
       - id: isort
+        name: isort
+        language_version: python3
+        types: [python]
+        args: ["--profile=black"]
